--- a/templates/folder.html
+++ b/templates/folder.html
@@ -6,34 +6,53 @@
         <title>Mikochi</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link href='https://css.gg/css' rel='stylesheet'>
+        <style>
+            .icon {
+                margin: 0.1em;
+                display: inline-block;
+            }
+        </style>
     </head>
     <body>
         <main>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Name</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{ range .dirEntries }}
-                    <tr>
-                        {{ if .IsDir }}
-                        <td><i class="gg-folder"></i></i></td>
-                        {{ else }}
-                        <td><i class="gg-file"></i></td>
+            <div class="container">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Name</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{ if not .isRoot }}
+                        <tr>
+                            <td><i class="gg-folder"></i></i></td>
+                            <td><a href="..">..</a></td>
+                        </tr>
                         {{ end }}
+                        {{ range .dirEntries }}
+                        <tr>
+                            {{ if .IsDir }}
+                            <td><i class="icon gg-folder"></i></i></td>
+                            {{ else }}
+                            <td><i class="icon gg-file"></i></td>
+                            {{ end }}
 
-                        {{ if .IsDir }}
-                        <td><a href="./{{ .Name }}">{{ .Name }}</a></td>
-                        {{ else }}
-                        <td>{{ .Name }}</td>
+                            {{ if .IsDir }}
+                            <td><a href="{{ .Name }}/">{{ .Name }}</a></td>
+                            {{ else }}
+                            <td>{{ .Name }}</td>
+                            {{ end }}
+
+                            {{ if not .IsDir }}
+                            <td><i class="icon gg-arrow-down-o"></i><i class="icon gg-copy"></i></td>
+                            {{ end}}
+                        </tr>
                         {{ end }}
-                    </tr>
-                    {{ end }}
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </main>
     </body>
 </html>
