--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -24,10 +24,9 @@ body {
 
 #app > main {
 	display: flex;
-	padding-top: 3.5rem;
+	padding-top: 8rem;
 	margin: 0 auto;
-	min-height: calc(100vh - 3.5rem);
-	max-width: 1280px;
+	max-width: 640px;
 	align-items: center;
 	justify-content: center;
 }
@@ -36,4 +35,9 @@ body {
 	#app > main {
 		margin: 0 2rem;
 	}
+}
+
+.table {
+	width: 100%;
+	text-align: left;
 }
