--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -9,15 +9,23 @@
 	width: 100%;
 	height: 3.5rem;
 
-	background: #673ab8;
+	background: #002b36;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 	z-index: 50;
+}
+
+.header > nav {
+	display: flex;
+	margin: auto;
+	max-width: 720px;
+	align-items: center;
+	justify-content: center;
 }
 
 .header a {
 	display: inline-block;
 	padding: 0 1rem;
-	color: #fff;
+	color: #D4CB92;
 	text-decoration: none;
 	line-height: 3.5rem;
 }
