--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -5,8 +5,8 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	color-scheme: light dark;
-	color: #444;
-	background: #fafafa;
+	color: #E6E1C5;
+	background: #073642;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,8 +25,8 @@ body {
 #app > main {
 	display: flex;
 	padding-top: 8rem;
-	margin: 0 auto;
-	max-width: 640px;
+	margin: auto;
+	max-width: 720px;
 	align-items: center;
 	justify-content: center;
 }
@@ -40,4 +40,16 @@ body {
 .table {
 	width: 100%;
 	text-align: left;
+}
+
+a {
+	color: #D4CB92;
+}
+
+table  {
+	width: 100%;
+}
+
+table > thead {
+	color: #80A4ED;
 }
