--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -1,55 +1,55 @@
 :root {
-	font-family: 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-family: "Helvetica Neue", arial, sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-	color-scheme: light dark;
-	color: #E6E1C5;
-	background: #073642;
+  color-scheme: light dark;
+  color: #e6e1c5;
+  background: #073642;
 }
 
 @media (prefers-color-scheme: dark) {
-	:root {
-		color: #fff;
-		background: #1c1c1c;
-	}
+  :root {
+    color: #fff;
+    background: #1c1c1c;
+  }
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
 
 #app > main {
-	display: flex;
-	padding-top: 8rem;
-	margin: auto;
-	max-width: 720px;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  padding-top: 8rem;
+  margin: auto;
+  max-width: 720px;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 639px) {
-	#app > main {
-		margin: 0 2rem;
-	}
+  #app > main {
+    margin: 0 2rem;
+  }
 }
 
 .table {
-	width: 100%;
-	text-align: left;
+  width: 100%;
+  text-align: left;
 }
 
 a {
-	color: #D4CB92;
+  color: #d4cb92;
 }
 
-table  {
-	width: 100%;
+table {
+  width: 100%;
 }
 
 table > thead {
-	color: #80A4ED;
+  color: #80a4ed;
 }
