--- a/frontend/src/components/login/style.css
+++ b/frontend/src/components/login/style.css
@@ -1,5 +1,5 @@
 .form {
-    max-width: 240px;
+  max-width: 240px;
 }
 
 .container {
@@ -8,11 +8,11 @@
 }
 
 .input {
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    margin-bottom: 2em;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  margin-bottom: 2em;
 }
 
 .userIcon {
@@ -51,7 +51,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: #FF6B6C;
+  background-color: #ff6b6c;
   color: #073642;
   border-radius: 3px;
 }
