--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
 
   width: 100%;
-  height: 3.5rem;
+  height: 4.5rem;
 
   background: #002b36;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -20,11 +20,13 @@
   max-width: 720px;
   align-items: center;
   justify-content: center;
+  padding: 0.5rem;
 }
 
 .header a {
-  display: inline-block;
-  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  margin: 0.5rem 1rem;
   color: #d4cb92;
   text-decoration: none;
   line-height: 3.5rem;
@@ -35,11 +37,6 @@
   background: rgba(0, 0, 0, 0.2);
 }
 
-.header a.logo {
-  display: flex;
-  align-items: center;
-  padding: 0.5rem 1rem;
-}
 
 .logo h1 {
   padding: 0 0.5rem;
