--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -18,6 +18,7 @@
   display: flex;
   margin: auto;
   max-width: 720px;
+  max-height: 100%;
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
