--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,70 +1,97 @@
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
+  font-family: "Helvetica Neue", arial, sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-	color: #222;
-	background-color: #ffffff;
-
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
-}
-
-body {
-	margin: 0;
-}
-
-#app {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-}
-
-header {
-	display: flex;
-	justify-content: flex-end;
-	background-color: #673ab8;
-}
-
-header nav {
-	display: flex;
-}
-
-header a {
-	color: #fff;
-	padding: 0.75rem;
-	text-decoration: none;
-}
-
-header a.active {
-	background-color: #0005;
-}
-
-header a:hover {
-	background-color: #0008;
-}
-
-main {
-	flex: auto;
-	display: flex;
-	align-items: center;
-	max-width: 1280px;
-	margin: 0 auto;
-	text-align: center;
-}
-
-@media (max-width: 639px) {
-	main {
-		margin: 2rem;
-	}
+  color-scheme: light dark;
+  color: #e6e1c5;
+  background: #073642;
 }
 
 @media (prefers-color-scheme: dark) {
-	:root {
-		color: #ccc;
-		background-color: #1a1a1a;
-	}
+  :root {
+    color: #fff;
+    background: #1c1c1c;
+  }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+#app > main {
+  display: flex;
+  padding-top: 8rem;
+  margin: auto;
+  max-width: 720px;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 639px) {
+  #app > main {
+    margin: 0 2rem;
+    max-width: 100%;
+  }
+}
+
+.table {
+  width: 100%;
+  text-align: left;
+}
+
+a {
+  color: #d4cb92;
+}
+
+table {
+  width: 100%;
+  margin: auto;
+  table-layout: fixed;
+}
+
+table > thead {
+  color: #80a4ed;
+}
+
+td {
+  word-wrap: break-word;
+  vertical-align: baseline;
+}
+
+th:first-of-type {
+  width: 2em;
+}
+
+td:first-of-type {
+  width: 2em;
+}
+
+th:nth-of-type(3) {
+  width: 8em;
+}
+
+td:nth-of-type(3) {
+  width: 8em;
+}
+
+th:last-of-type {
+  width: 8em;
+}
+
+th:last-of-type {
+  width: 8em;
+}
+
+@media (max-width: 639px) {
+  th:last-of-type {
+    width: 4em;
+  }
+
+  th:last-of-type {
+    width: 4em;
+  }
 }
