--- a/frontend/src/components/logout/style.css
+++ b/frontend/src/components/logout/style.css
@@ -1,3 +1,14 @@
 .logout {
-  margin-left: 50px;
+  margin-left: 5em;
+  margin-bottom: 1em;
+  border: 2px solid #d4cb92;
+  color: #d4cb92;
+  background-color: transparent;
+  padding: 1em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 1em;
+  cursor: pointer;
 }
