--- a/frontend/src/pages/Login/style.css
+++ b/frontend/src/pages/Login/style.css
@@ -36,7 +36,8 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  border-radius: 3px;
+  border-radius: 1em;
+  cursor: pointer;
 }
 
 .buttonContainer {
