Hide upload on mobile

--- a/frontend/src/components/add/style.css
+++ b/frontend/src/components/add/style.css
@@ -4,6 +4,12 @@
   right: 10%;
 }
 
+@media (max-width: 768px) {
+  .floating {
+    display: none;
+  }
+}
+
 .floatingUpload {
   position: relative;
   bottom: 2em;
